deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kao-website-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: kao-website
  template:
    metadata:
      labels:
        app: kao-website
    spec:
      containers:
      - name: kao-website
        image: makarakukara/kao_website:latest
        ports:
        - containerPort: 8000
      imagePullSecrets:
        - name: regcred
