service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kao-website-service
spec:
  selector:
    app: kao-website
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8000
  type: LoadBalancer
